# QtAppTemplate

./: CMakeLists.txt  README.md
SRC/: main.cpp  main_log4cpp_config.cpp  mainwindow.cpp  mainwindow.h
config/: log4cpp.conf  log4cpp_good.conf
